# AUTO_POE_BOT

./: .gitignore  Bot.ahk
.claude/: settings.local.json
cpp/: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  vcpkg.json
cpp/core/: CMakeLists.txt
cpp/core/include/poebot/: coords.hpp  game_version.hpp  version.hpp
cpp/core/include/poebot/config/: affix_library.hpp  profile.hpp  settings.hpp  settings_io.hpp
cpp/core/include/poebot/grid/: grid.hpp
cpp/core/include/poebot/hotkey/: binding.hpp  hotkey_manager.hpp
cpp/core/include/poebot/i18n/: i18n.hpp
cpp/core/include/poebot/input/: cursor.hpp  keyboard.hpp  motion.hpp  mouse.hpp
cpp/core/include/poebot/item/: affix_matcher.hpp
cpp/core/include/poebot/log/: log_sink.hpp
cpp/core/include/poebot/sys/: clipboard.hpp  encoding.hpp  screen_capture.hpp
cpp/core/include/poebot/task/: craft_task.hpp  deposit_task.hpp  map_task.hpp  task.hpp  task_runner.hpp  task_util.hpp
cpp/core/include/poebot/vision/: template_match.hpp
cpp/core/include/poebot/win/: window.hpp
cpp/core/src/: placeholder.cpp
cpp/core/src/config/: affix_library.cpp  atomic_replace_file.hpp  profile.cpp  settings.cpp  settings_io.cpp
cpp/core/src/hotkey/: binding.cpp  hotkey_manager.cpp
cpp/core/src/i18n/: i18n.cpp
cpp/core/src/input/: cursor.cpp  keyboard.cpp  motion.cpp  mouse.cpp
cpp/core/src/item/: affix_matcher.cpp
cpp/core/src/log/: log_sink.cpp
cpp/core/src/sys/: clipboard.cpp  encoding.cpp  screen_capture.cpp
cpp/core/src/task/: craft_task.cpp  deposit_task.cpp  map_task.cpp  task_runner.cpp
cpp/core/src/vision/: template_match.cpp
cpp/core/src/win/: window.cpp
cpp/gui/: CMakeLists.txt
cpp/gui/include/poebot/gui/: affix_library_widget.hpp  app.hpp  capture_service.hpp  d3d11_backend.hpp  hotkey_capture.hpp  main_window.hpp  panel.hpp  resource.h
cpp/gui/include/poebot/gui/panels/: config_panel.hpp  craft_panel.hpp  deposit_panel.hpp  log_panel.hpp  main_layout.hpp  map_panel.hpp
cpp/gui/res/: app.rc
cpp/gui/src/: affix_library_widget.cpp  app.cpp  capture_service.cpp  d3d11_backend.cpp  hotkey_capture.cpp  main.cpp  main_window.cpp
cpp/gui/src/panels/: config_panel.cpp  craft_panel.cpp  deposit_panel.cpp  log_panel.cpp  main_layout.cpp  map_panel.cpp
cpp/scripts/: dev-shell.bat  make_icon.py
